# quantum-resonance-ledger

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  go.mod  run
cmd/example/: main.go
docs/: equations.md  executive_summary.md  implementation_plan.md  installation.md  paper.md  qrl_whitepaper.md  qsd.md  rtt.md  tdd-node.md  tdd-rtt-go.md  tdd-sim.md  tdd.md  technical_whitepaper.md  whitepaper.md  wp2.md  yellowpaper.md
go/cmd/simulation/: main.go
go/internal/simulation/: distribution.go  distribution_test.go  event.go  event_test.go  network_test.go  node.go  node_test.go  parameter.go  parameter_test.go  (+1 more)
node/: go.mod  run-test
node/scripts/: go_test_formatter.sh
python/: requirements.txt
python/qrl_simulation/: __init__.py  distributions.py  node.py  quantum_blockchain.py
python/qrl_simulation.egg-info/: SOURCES.txt
python/src/: node.py  parameters.py  quantum_blockchain.py  simulation_engine.py
python/test/: test_distributions.py  test_node.py  test_parameters.py  test_quantum_blockchain_pytest.py
python/tests/: test_distributions.py  test_node.py  test_qsd.py  test_quantum_blockchain_pytest.py
scripts/: pretty-test  pretty-test-watch
simulation/: pyproject.toml
simulation/qrl_simulation/: node.py  quantum_blockchain.py  simulation_engine.py
simulation/qrl_simulation.egg-info/: PKG-INFO  top_level.txt
simulation/scripts/: increment_version.py  update_whitepaper_date.py
simulation/tests/: test_node.py  test_parameters.py  test_quantum_blockchain_pytest.py  test_simulation_engine.py
test/: test_quantum_blockchain_pytest.py
(+64 files in other folders)
